traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:32: error: '=' expected but identifier found.
def positionfinale Boolean = {
                   ^Snake:58: error: illegal start of simple expression
}
^